QtBeef/src/Qt/qimage.bf

	[LinkName("QImage_FromData3")]
	public static extern void* QImage_FromData3(void** data);
	[LinkName("QImage_CacheKey")]
	public static extern c_longlong QImage_CacheKey(void* self);
	[LinkName("QImage_PaintEngine")]
	public static extern void** QImage_PaintEngine(void* self);
	[LinkName("QImage_DotsPerMeterX")]
	public static extern c_int QImage_DotsPerMeterX(void* self);
	[LinkName("QImage_DotsPerMeterY")]
	public static extern c_int QImage_DotsPerMeterY(void* self);
	[LinkName("QImage_SetDotsPerMeterX")]
	public static extern void QImage_SetDotsPerMeterX(void* self, c_int dotsPerMeterX);
	[LinkName("QImage_SetDotsPerMeterY")]
	public static extern void QImage_SetDotsPerMeterY(void* self, c_int dotsPerMeterY);
	[LinkName("QImage_Offset")]
	public static extern void* QImage_Offset(void* self);
	[LinkName("QImage_SetOffset")]
	public static extern void QImage_SetOffset(void* self, void** offset);
	[LinkName("QImage_TextKeys")]
	public static extern void* QImage_TextKeys(void* self);
	[LinkName("QImage_Text")]
	public static extern libqt_string QImage_Text(void* self);
	[LinkName("QImage_SetText")]
	public static extern void QImage_SetText(void* self, libqt_string key, libqt_string value);
	[LinkName("QImage_PixelFormat")]
	public static extern void* QImage_PixelFormat(void* self);
	[LinkName("QImage_ToPixelFormat")]
	public static extern void* QImage_ToPixelFormat(QImage_Format format);
	[LinkName("QImage_ToImageFormat")]
	public static extern QImage_Format QImage_ToImageFormat(void* format);
	[LinkName("QImage_Metric")]
	public static extern c_int QImage_Metric(void* self, QPaintDevice_PaintDeviceMetric metric);
	[LinkName("QImage_Mirrored_Helper")]
	public static extern void* QImage_Mirrored_Helper(void* self, bool horizontal, bool vertical);
	[LinkName("QImage_RgbSwapped_Helper")]
	public static extern void* QImage_RgbSwapped_Helper(void* self);
	[LinkName("QImage_Mirrored_Inplace")]
	public static extern void QImage_Mirrored_Inplace(void* self, bool horizontal, bool vertical);
	[LinkName("QImage_RgbSwapped_Inplace")]
	public static extern void QImage_RgbSwapped_Inplace(void* self);
	[LinkName("QImage_ConvertToFormat_Helper")]
	public static extern void* QImage_ConvertToFormat_Helper(void* self, QImage_Format format, void* flags);
	[LinkName("QImage_ConvertToFormat_Inplace")]
	public static extern bool QImage_ConvertToFormat_Inplace(void* self, QImage_Format format, void* flags);
	[LinkName("QImage_SmoothScaled")]
	public static extern void* QImage_SmoothScaled(void* self, c_int w, c_int h);
	[LinkName("QImage_DetachMetadata")]
	public static extern void QImage_DetachMetadata(void* self);
	[LinkName("QImage_Copy1")]
	public static extern void* QImage_Copy1(void* self, void** rect);
	[LinkName("QImage_ConvertToFormat22")]
	public static extern void* QImage_ConvertToFormat22(void* self, QImage_Format f, void* flags);
	[LinkName("QImage_ConvertToFormat3")]
	public static extern void* QImage_ConvertToFormat3(void* self, QImage_Format f, void** colorTable, void* flags);
	[LinkName("QImage_ConvertedTo2")]
	public static extern void* QImage_ConvertedTo2(void* self, QImage_Format f, void* flags);
	[LinkName("QImage_ConvertTo2")]
	public static extern void QImage_ConvertTo2(void* self, QImage_Format f, void* flags);
	[LinkName("QImage_CreateAlphaMask1")]
	public static extern void* QImage_CreateAlphaMask1(void* self, void* flags);
	[LinkName("QImage_CreateHeuristicMask1")]
	public static extern void* QImage_CreateHeuristicMask1(void* self, bool clipTight);
	[LinkName("QImage_CreateMaskFromColor2")]
	public static extern void* QImage_CreateMaskFromColor2(void* self, c_uint color, Qt_MaskMode mode);
	[LinkName("QImage_Scaled3")]
	public static extern void* QImage_Scaled3(void* self, c_int w, c_int h, Qt_AspectRatioMode aspectMode);
	[LinkName("QImage_Scaled4")]
	public static extern void* QImage_Scaled4(void* self, c_int w, c_int h, Qt_AspectRatioMode aspectMode, Qt_TransformationMode mode);
	[LinkName("QImage_Scaled22")]
	public static extern void* QImage_Scaled22(void* self, void** s, Qt_AspectRatioMode aspectMode);
	[LinkName("QImage_Scaled32")]
	public static extern void* QImage_Scaled32(void* self, void** s, Qt_AspectRatioMode aspectMode, Qt_TransformationMode mode);
	[LinkName("QImage_ScaledToWidth2")]
	public static extern void* QImage_ScaledToWidth2(void* self, c_int w, Qt_TransformationMode mode);
	[LinkName("QImage_ScaledToHeight2")]
	public static extern void* QImage_ScaledToHeight2(void* self, c_int h, Qt_TransformationMode mode);
	[LinkName("QImage_Transformed2")]
	public static extern void* QImage_Transformed2(void* self, void** matrix, Qt_TransformationMode mode);
	[LinkName("QImage_Mirrored1")]
	public static extern void* QImage_Mirrored1(void* self, bool horizontally);
	[LinkName("QImage_Mirrored2")]
	public static extern void* QImage_Mirrored2(void* self, bool horizontally, bool vertically);
	[LinkName("QImage_Mirror1")]
	public static extern void QImage_Mirror1(void* self, bool horizontally);
	[LinkName("QImage_Mirror2")]
	public static extern void QImage_Mirror2(void* self, bool horizontally, bool vertically);
	[LinkName("QImage_InvertPixels1")]
	public static extern void QImage_InvertPixels1(void* self, QImage_InvertMode param1);
	[LinkName("QImage_Load22")]
	public static extern bool QImage_Load22(void* self, libqt_string fileName, c_char* format);
	[LinkName("QImage_LoadFromData22")]
	public static extern bool QImage_LoadFromData22(void* self, void* data, c_char* format);
	[LinkName("QImage_LoadFromData32")]
	public static extern bool QImage_LoadFromData32(void* self, c_uchar* buf, c_int lenVal, c_char* format);
	[LinkName("QImage_LoadFromData23")]
	public static extern bool QImage_LoadFromData23(void* self, void** data, c_char* format);
	[LinkName("QImage_Save22")]
	public static extern bool QImage_Save22(void* self, libqt_string fileName, c_char* format);
	[LinkName("QImage_Save3")]
	public static extern bool QImage_Save3(void* self, libqt_string fileName, c_char* format, c_int quality);
	[LinkName("QImage_Save23")]
	public static extern bool QImage_Save23(void* self, void** device, c_char* format);
	[LinkName("QImage_Save32")]
	public static extern bool QImage_Save32(void* self, void** device, c_char* format, c_int quality);
	[LinkName("QImage_FromData22")]
	public static extern void* QImage_FromData22(void* data, c_char* format);
	[LinkName("QImage_FromData32")]
	public static extern void* QImage_FromData32(c_uchar* data, c_int size, c_char* format);
	[LinkName("QImage_FromData23")]
	public static extern void* QImage_FromData23(void** data, c_char* format);
	[LinkName("QImage_Text1")]
	public static extern libqt_string QImage_Text1(void* self, libqt_string key);
	[LinkName("QImage_DetachMetadata1")]
	public static extern void QImage_DetachMetadata1(void* self, bool invalidateCache);
}
